# pdf_signer

./: .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  Cargo.toml  README.md
examples/: gen_assets.rs
src/: crypto.rs  dss.rs  error.rs  incremental.rs  lib.rs  main.rs  policy.rs  sign.rs  testkit.rs  trust.rs  verify.rs
tests/: pkits.rs  roundtrip.rs
