[package]
name = "pdf_signer"
version = "0.2.1"
edition = "2021"
rust-version = "1.74"
description = "Sign PDF documents with a PKCS#12 keystore and verify their signatures (PAdES B-B → B-LTA)."
license = "GPL-3.0-or-later"
repository = "https://github.com/StrategicProjects/pdf_signer"
readme = "README.md"

[lib]
name = "pdf_signer"
crate-type = ["lib"]

[[bin]]
name = "pdf_signer"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
lopdf = "0.36"
thiserror = "2"
flate2 = "1"
# Richer visible appearances: embedded TrueType fonts and PNG/JPEG logos.
ttf-parser = "0.25"
png = "0.18"
# CLI argument parsing (used only by the `pdf_signer` binary).
clap = { version = "4", features = ["derive", "env"], optional = true }

# Pure-Rust crypto stack (no OpenSSL / system libs) for a vendorable CRAN build.
# x509-cert is pulled in transitively by cms; we use its `builder` for testkit.
cms = { version = "0.2", features = ["builder"] }
x509-cert = { version = "0.2", features = ["builder"] }
der = { version = "0.7", features = ["oid"] }
spki = "0.7"
const-oid = { version = "0.9", features = ["db"] }
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
signature = "2"
p12-keystore = "0.2"
rand = "0.8"
# ECDSA chain verification (P-256 / P-384), for ICP-Brasil EC chains.
p256 = "0.13"
p384 = "0.13"
# Ed25519 signing & verification (RFC 8419 in CMS).
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
ed25519 = "2"
# OCSP revocation (requests + response parsing).
x509-ocsp = { version = "0.2", features = ["builder"] }
sha1 = { version = "0.10", features = ["oid"] }

# Optional: HTTPS for TSA / CRL endpoints (rustls). Off by default to keep the
# base crate pure-Rust and lean; enable for ICP-Brasil HTTPS TSAs.
ureq = { version = "3", optional = true }

[features]
default = []
https = ["dep:ureq"]
cli = ["dep:clap"]
